--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "SANN404 Temp Mail",
-  "short_name": "SANN404",
+  "name": "ZUXXA404 Temp Mail",
+  "short_name": "ZUXXA404",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#F2F4F8",
   "theme_color": "#F2F4F8",
-  "description": "Secure Temporary Email by SANN404",
+  "description": "Secure Temporary Email by ZUXXA404",
   "icons": [
     {
       "src": "https://cdn.odzre.my.id/uvw.jpg",
